--- a/feature-dapp-impl/src/main/res/layout/fragment_dapp_main.xml
+++ b/feature-dapp-impl/src/main/res/layout/fragment_dapp_main.xml
@@ -111,10 +111,11 @@
             app:layout_constraintTop_toBottomOf="@+id/dappMainSearch" />
 
 
-        <io.novafoundation.nova.common.view.ManageButton
+        <io.novafoundation.nova.common.view.IconButton
             android:id="@+id/dappMainManage"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:src="@drawable/ic_options"
             app:layout_constraintBottom_toBottomOf="@+id/dappMainCatalogTitle"
             app:layout_constraintEnd_toEndOf="@+id/dappMainSearch"
             app:layout_constraintTop_toTopOf="@+id/dappMainCatalogTitle" />
