--- a/feature-assets/src/main/res/layout/item_asset_header.xml
+++ b/feature-assets/src/main/res/layout/item_asset_header.xml
@@ -50,7 +50,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="28dp"
         android:layout_marginBottom="16dp"
-        android:text="@string/wallet_assets"
+        android:text="@string/wallet_tokens"
         app:layout_constraintBottom_toTopOf="@+id/balanceListAssetPlaceholder"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/balanceListNfts"
