--- a/common/src/main/res/drawable/secondary_chip_background.xml
+++ b/common/src/main/res/drawable/secondary_chip_background.xml
@@ -1,11 +1,21 @@
 <?xml version="1.0" encoding="utf-8"?>
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
     <item android:state_enabled="true">
-        <shape android:shape="rectangle">
-            <solid android:color="@color/accentSecondary" />
+        <ripple android:color="@color/white_48">
+            <item android:id="@android:id/mask" android:gravity="center">
+                <shape android:shape="rectangle">
+                    <corners android:radius="10dp" />
+                </shape>
+            </item>
 
-            <corners android:radius="10dp" />
-        </shape>
+            <item android:gravity="center">
+                <shape android:shape="rectangle">
+                    <solid android:color="@color/accentSecondary" />
+
+                    <corners android:radius="10dp" />
+                </shape>
+            </item>
+        </ripple>
     </item>
 
     <item android:state_enabled="false">
