--- a/common/src/main/res/values/styles.xml
+++ b/common/src/main/res/values/styles.xml
@@ -320,13 +320,15 @@
     </style>
 
     <style name="Widget.Nova.Input.Text" parent="Widget.Nova.Input.EditText">
-        <item name="android:textAppearance">@style/TextAppearance.NovaFoundation.Body1</item>
+        <item name="android:textAppearance">@style/TextAppearance.NovaFoundation.Regular.SubHeadline</item>
+        <item name="android:textColorHint">@color/white_32</item>
         <item name="android:paddingStart">12dp</item>
         <item name="android:paddingEnd">12dp</item>
         <item name="android:paddingTop">14dp</item>
         <item name="android:paddingBottom">14dp</item>
         <item name="android:gravity">center_vertical</item>
         <item name="android:textColor">@color/white</item>
+        <item name="hintTextColor">@color/white_32</item>
         <item name="android:textCursorDrawable">@null</item>
     </style>
 
