--- a/feature-account-api/src/main/res/values/attrs.xml
+++ b/feature-account-api/src/main/res/values/attrs.xml
@@ -4,4 +4,9 @@
         <attr name="actionIcon" />
         <attr name="showBackground" format="boolean" />
     </declare-styleable>
+
+    <declare-styleable name="AddressInputField">
+
+        <attr name="android:hint" />
+    </declare-styleable>
 </resources>
