Add watch wallet (#351)
* Add watch wallet screen skeleton

* Make substratePublicKey nullable

* Make substrateCryptoType optional

* Add watch wallet to db

* Remove name filters

* Code style

* Remove dublicate attribute

--- a/common/src/main/res/values/styles.xml
+++ b/common/src/main/res/values/styles.xml
@@ -320,7 +320,8 @@
     </style>
 
     <style name="Widget.Nova.Input.Text" parent="Widget.Nova.Input.EditText">
-        <item name="android:textAppearance">@style/TextAppearance.NovaFoundation.Body1</item>
+        <item name="android:textAppearance">@style/TextAppearance.NovaFoundation.Regular.SubHeadline</item>
+        <item name="android:textColorHint">@color/white_32</item>
         <item name="android:paddingStart">12dp</item>
         <item name="android:paddingEnd">12dp</item>
         <item name="android:paddingTop">14dp</item>
