--- a/common/src/main/res/values/styles.xml
+++ b/common/src/main/res/values/styles.xml
@@ -39,6 +39,10 @@
         <item name="lineHeight">18sp</item>
     </style>
 
+    <style name="TextAppearance.NovaFoundation.SemiBold.SubHeadline">
+        <item name="android:textSize">?attr/textSizeSubHeadline</item>
+    </style>
+
     <!-- Bold -->
 
     <style name="TextAppearance.NovaFoundation.Bold" parent="TextAppearance.AppCompat.Title">
@@ -328,6 +332,7 @@
         <item name="android:paddingBottom">14dp</item>
         <item name="android:gravity">center_vertical</item>
         <item name="android:textColor">@color/white</item>
+        <item name="android:maxLines">1</item>
         <item name="android:textCursorDrawable">@null</item>
     </style>
 
