--- a/common/src/main/res/values/styles.xml
+++ b/common/src/main/res/values/styles.xml
@@ -333,6 +333,7 @@
         <item name="android:gravity">center_vertical</item>
         <item name="android:textColor">@color/white</item>
         <item name="android:maxLines">1</item>
+        <item name="android:inputType">text</item>
         <item name="android:textCursorDrawable">@null</item>
     </style>
 
