--- a/feature-account-impl/src/main/res/layout/fragment_create_watch_wallet.xml
+++ b/feature-account-impl/src/main/res/layout/fragment_create_watch_wallet.xml
@@ -3,6 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
+    android:id="@+id/createWatchWalletContainer"
     android:layout_height="match_parent"
     android:orientation="vertical"
     tools:background="@color/black">
@@ -16,6 +17,7 @@
     <ScrollView
         android:layout_width="match_parent"
         android:layout_height="0dp"
+        android:id="@+id/createWatchWalletScrollArea"
         android:layout_weight="1">
 
         <LinearLayout
