--- a/common/src/main/res/values/styles.xml
+++ b/common/src/main/res/values/styles.xml
@@ -296,6 +296,16 @@
         <item name="android:textColor">@color/white_80</item>
     </style>
 
+    <style name="Widget.Nova.ChipLabel" parent="">
+        <item name="android:paddingStart">6dp</item>
+        <item name="android:paddingTop">3dp</item>
+        <item name="android:paddingEnd">8dp</item>
+        <item name="android:paddingBottom">3dp</item>
+        <item name="android:textColor">@color/white_80</item>
+        <item name="android:includeFontPadding">false</item>
+        <item name="android:textAppearance">@style/TextAppearance.NovaFoundation.SemiBold.Caps1</item>
+    </style>
+
     <!-- Buttons -->
 
     <!-- Input -->
