--- a/app/src/main/res/navigation/main_nav_graph.xml
+++ b/app/src/main/res/navigation/main_nav_graph.xml
@@ -308,13 +308,7 @@
         android:id="@+id/accountsFragment"
         android:name="io.novafoundation.nova.feature_account_impl.presentation.account.list.AccountListFragment"
         android:label="AccountsFragment"
-        tools:layout="@layout/fragment_accounts">
-
-        <action
-            android:id="@+id/action_accountsFragment_to_editAccountsFragment"
-            app:destination="@id/editAccountsFragment" />
-
-    </fragment>
+        tools:layout="@layout/fragment_accounts" />
 
     <fragment
         android:id="@+id/nodesFragment"
@@ -402,22 +396,6 @@
         app:exitAnim="@anim/fragment_open_exit"
         app:popEnterAnim="@anim/fragment_close_enter"
         app:popExitAnim="@anim/fragment_close_exit" />
-
-    <fragment
-        android:id="@+id/editAccountsFragment"
-        android:name="io.novafoundation.nova.feature_account_impl.presentation.account.edit.AccountEditFragment"
-        android:label="EditAccountsFragment"
-        tools:layout="@layout/fragment_edit_accounts">
-
-        <action
-            android:id="@+id/action_editAccountsFragment_to_mainFragment"
-            app:enterAnim="@anim/fragment_close_enter"
-            app:exitAnim="@anim/fragment_close_exit"
-            app:popEnterAnim="@anim/fragment_open_enter"
-            app:popExitAnim="@anim/fragment_open_exit"
-            app:popUpTo="@id/mainFragment" />
-
-    </fragment>
 
     <fragment
         android:id="@+id/balanceDetailFragment"
