--- a/common/src/main/res/layout/bottom_sheet_dynamic_list.xml
+++ b/common/src/main/res/layout/bottom_sheet_dynamic_list.xml
@@ -1,39 +1,55 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/dynamicListSheetItemContainer"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:orientation="vertical"
-    android:paddingBottom="24dp"
     tools:layout_height="300dp">
 
     <View
+        android:id="@+id/dynamicListSheetPuller"
         style="@style/Widget.Nova.Puller"
-        android:layout_marginTop="4dp"
-        android:layout_gravity="center_horizontal" />
+        android:layout_gravity="center_horizontal"
+        android:layout_marginTop="4dp" />
 
-    <TextView
-        android:id="@+id/dynamicListSheetTitle"
-        style="@style/TextAppearance.NovaFoundation.SemiBold.Body"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="16dp"
-        android:layout_marginTop="15dp"
-        android:layout_marginBottom="16dp"
-        tools:text="Title" />
-
-    <View
-        android:id="@+id/dynamicListSheetDivider"
-        android:layout_width="wrap_content"
-        android:layout_height="1dp"
-        android:background="@color/gray3" />
-    
-    <androidx.recyclerview.widget.RecyclerView
+    <LinearLayout
+        android:id="@+id/dynamicListSheetHeader"
         android:layout_width="match_parent"
-        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="4dp"
+        android:orientation="horizontal">
+
+        <TextView
+            android:id="@+id/dynamicListSheetTitle"
+            style="@style/TextAppearance.NovaFoundation.SemiBold.Body"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="16dp"
+            android:layout_marginTop="13dp"
+            android:layout_marginBottom="13dp"
+            android:layout_weight="1"
+            tools:text="Title" />
+
+        <ImageView
+            android:id="@+id/dynamicListSheetRightAction"
+            android:layout_width="24dp"
+            android:layout_height="24dp"
+            android:layout_marginTop="12dp"
+            android:layout_marginEnd="12dp"
+            android:visibility="gone"
+            app:tint="@color/actions_color"
+            tools:src="@drawable/ic_settings_outline" />
+    </LinearLayout>
+
+    <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/dynamicListSheetContent"
-        android:layout_height="wrap_content" />
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="4dp"
+        android:clipToPadding="false"
+        android:paddingBottom="24dp"
+        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager" />
 
 </LinearLayout>
