Switch account bottom sheet and selected account type icons

--- a/feature-assets/src/main/res/layout/item_asset_header.xml
+++ b/feature-assets/src/main/res/layout/item_asset_header.xml
@@ -16,12 +16,11 @@
         app:layout_constraintTop_toTopOf="parent"
         tools:text="@tools:sample/full_names" />
 
-    <ImageView
+    <io.novafoundation.nova.feature_account_api.view.SelectedWalletView
         android:id="@+id/balanceListAvatar"
-        android:layout_width="@dimen/avatar_size"
-        android:layout_height="@dimen/avatar_size"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         android:layout_marginTop="12dp"
-        android:src="@color/white"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
