--- a/app/src/main/res/navigation/main_nav_graph.xml
+++ b/app/src/main/res/navigation/main_nav_graph.xml
@@ -80,6 +80,10 @@
         app:destination="@id/exportJsonPasswordFragment" />
 
     <action
+        android:id="@+id/action_open_switch_accounts"
+        app:destination="@id/switchAccountsFragment" />
+
+    <action
         android:id="@+id/action_open_accounts"
         app:destination="@id/accountsFragment"
         app:enterAnim="@anim/fragment_open_enter"
@@ -309,6 +313,12 @@
         android:name="io.novafoundation.nova.feature_account_impl.presentation.account.list.AccountListFragment"
         android:label="AccountsFragment"
         tools:layout="@layout/fragment_accounts" />
+
+    <dialog
+        android:id="@+id/switchAccountsFragment"
+        android:name="io.novafoundation.nova.feature_account_impl.presentation.account.select.AccountSwitchFragment"
+        android:label="SwitchAccountsFragment"
+        tools:layout="@layout/bottom_sheet_dynamic_list" />
 
     <fragment
         android:id="@+id/nodesFragment"
