--- a/feature-account-impl/src/main/res/layout/item_account.xml
+++ b/feature-account-impl/src/main/res/layout/item_account.xml
@@ -2,12 +2,11 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/itemAccountContainer"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:id="@+id/itemAccountContainer"
     android:animateLayoutChanges="true"
-    android:background="@drawable/bg_primary_list_item"
-    tools:background="@color/black">
+    android:background="@drawable/bg_primary_list_item">
 
     <ImageView
         android:id="@+id/itemAccountDelete"
@@ -43,7 +42,7 @@
         android:includeFontPadding="false"
         android:textColor="@color/white"
         app:layout_constraintBottom_toTopOf="@+id/itemAccountSubtitle"
-        app:layout_constraintEnd_toStartOf="@+id/itemAccountArrow"
+        app:layout_constraintEnd_toStartOf="@+id/itemAccountEndBarrier"
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toEndOf="@+id/itemAccountIcon"
         app:layout_constraintTop_toTopOf="parent"
@@ -60,7 +59,7 @@
         android:layout_marginBottom="5dp"
         android:textColor="@color/white_64"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toStartOf="@+id/itemAccountArrow"
+        app:layout_constraintEnd_toStartOf="@+id/itemAccountEndBarrier"
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toEndOf="@+id/itemAccountIcon"
         app:layout_constraintTop_toBottomOf="@+id/itemAccountTitle"
@@ -77,5 +76,26 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:tint="@color/white_48" />
+
+    <RadioButton
+        android:id="@+id/itemAccountCheck"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center_vertical"
+        android:layout_marginEnd="16dp"
+        android:buttonTint="@color/tint_radio_button"
+        android:clickable="false"
+        android:duplicateParentState="true"
+        android:visibility="gone"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <androidx.constraintlayout.widget.Barrier
+        android:id="@+id/itemAccountEndBarrier"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:barrierDirection="left"
+        app:constraint_referenced_ids="itemAccountCheck, itemAccountArrow" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
