--- a/feature-assets/src/main/res/layout/item_asset_header.xml
+++ b/feature-assets/src/main/res/layout/item_asset_header.xml
@@ -8,10 +8,15 @@
     <TextView
         android:id="@+id/balanceListTotalTitle"
         style="@style/TextAppearance.NovaFoundation.SemiBold.Title3"
-        android:layout_width="wrap_content"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginTop="20dp"
         android:includeFontPadding="false"
+        app:layout_constraintHorizontal_bias="0"
+        android:singleLine="true"
+        android:ellipsize="end"
+        android:layout_marginEnd="16dp"
+        app:layout_constraintEnd_toStartOf="@+id/balanceListAvatar"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         tools:text="@tools:sample/full_names" />
