--- a/feature-account-impl/src/main/res/layout/item_account.xml
+++ b/feature-account-impl/src/main/res/layout/item_account.xml
@@ -38,6 +38,8 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="16dp"
         android:layout_marginTop="5dp"
+        android:singleLine="true"
+        android:ellipsize="end"
         android:layout_marginEnd="16dp"
         android:includeFontPadding="false"
         android:textColor="@color/white"
