--- a/feature-staking-impl/src/main/res/layout/fragment_staking.xml
+++ b/feature-staking-impl/src/main/res/layout/fragment_staking.xml
@@ -30,14 +30,13 @@
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent" />
 
-            <ImageView
+            <io.novafoundation.nova.feature_account_api.view.SelectedWalletView
                 android:id="@+id/stakingAvatar"
-                android:layout_width="@dimen/avatar_size"
-                android:layout_height="@dimen/avatar_size"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
                 android:layout_gravity="end"
                 android:layout_marginTop="25dp"
-                android:layout_marginEnd="16dp"
-                android:src="@color/white" />
+                android:layout_marginEnd="16dp" />
 
         </FrameLayout>
 
