New fixed bottom sheet and external actions design

--- a/feature-dapp-impl/src/main/res/layout/bottom_sheet_confirm_sign_extrinsic.xml
+++ b/feature-dapp-impl/src/main/res/layout/bottom_sheet_confirm_sign_extrinsic.xml
@@ -11,7 +11,7 @@
 
     <ImageView
         android:id="@+id/confirmSignExtinsicIcon"
-        style="@style/Widget.Nova.DappIcon.Big"
+        style="@style/Widget.Nova.Icon.Big"
         android:layout_marginTop="20dp"
         tools:src="@drawable/ic_earth" />
 
