--- a/common/src/main/res/layout/bottom_sheeet_fixed_list.xml
+++ b/common/src/main/res/layout/bottom_sheeet_fixed_list.xml
@@ -15,19 +15,12 @@
 
     <TextView
         android:id="@+id/fixedListSheetTitle"
-        style="@style/TextAppearance.NovaFoundation.Header3"
+        style="@style/TextAppearance.NovaFoundation.SemiBold.Body"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginEnd="16dp"
         android:layout_marginStart="16dp"
-        android:layout_marginTop="17dp"
-        tools:text="Title" />
-
-    <View
-        android:id="@+id/fixedListSheetDivider"
-        android:layout_width="wrap_content"
-        android:layout_height="1dp"
         android:layout_marginTop="16dp"
-        android:background="@color/gray3" />
-
+        android:layout_marginBottom="8dp"
+        tools:text="Title" />
 </LinearLayout>
