--- a/common/src/main/res/layout/item_sheet_iconic_label.xml
+++ b/common/src/main/res/layout/item_sheet_iconic_label.xml
@@ -1,12 +1,17 @@
 <?xml version="1.0" encoding="utf-8"?>
-<TextView android:id="@+id/itemExternalActionContent"
-    style="@style/TextAppearance.NovaFoundation.Body0"
+<TextView xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/itemExternalActionContent"
+    style="@style/TextAppearance.NovaFoundation.Regular.SubHeadline"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:background="@drawable/bg_primary_list_item"
-    android:drawableStart="@drawable/ic_copy"
-    android:padding="18dp"
-    android:paddingStart="20dp"
-    android:paddingEnd="20dp"
-    android:text="@string/transaction_details_copy_hash"
-    xmlns:android="http://schemas.android.com/apk/res/android" />
+    android:paddingStart="16dp"
+    android:paddingTop="12dp"
+    android:paddingEnd="16dp"
+    android:gravity="center_vertical"
+    android:paddingBottom="12dp"
+    android:textColor="@color/white"
+    tools:drawablePadding="12dp"
+    tools:drawableStart="@drawable/ic_copy"
+    tools:text="@string/transaction_details_copy_hash" />
