--- a/common/src/main/res/values/styles.xml
+++ b/common/src/main/res/values/styles.xml
@@ -266,6 +266,13 @@
         <item name="android:background">@drawable/bg_puller</item>
     </style>
 
+    <style name="Widget.Nova.Icon.Big" parent="">
+        <item name="android:layout_width">88dp</item>
+        <item name="android:layout_height">88dp</item>
+        <item name="android:background">@drawable/bg_icon_big</item>
+        <item name="android:padding">16dp</item>
+    </style>
+
     <style name="Widget.Nova.ActionButton" parent="TextAppearance.AppCompat.Body2">
         <item name="android:paddingTop">12dp</item>
         <item name="android:paddingBottom">12dp</item>
