--- a/common/src/main/res/values/attrs.xml
+++ b/common/src/main/res/values/attrs.xml
@@ -145,6 +145,9 @@
             <enum name="error" value="1" />
         </attr>
 
+        <attr name="styleBackgroundColor" format="color" />
+        <attr name="styleIcon" format="color|reference" />
+
         <attr name="android:text" />
     </declare-styleable>
 
