--- a/feature-assets/src/main/res/layout/item_asset_header.xml
+++ b/feature-assets/src/main/res/layout/item_asset_header.xml
@@ -8,20 +8,24 @@
     <TextView
         android:id="@+id/balanceListTotalTitle"
         style="@style/TextAppearance.NovaFoundation.SemiBold.Title3"
-        android:layout_width="wrap_content"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginTop="20dp"
+        android:layout_marginTop="33dp"
         android:includeFontPadding="false"
+        app:layout_constraintHorizontal_bias="0"
+        android:singleLine="true"
+        android:ellipsize="end"
+        android:layout_marginEnd="16dp"
+        app:layout_constraintEnd_toStartOf="@+id/balanceListAvatar"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         tools:text="@tools:sample/full_names" />
 
-    <ImageView
+    <io.novafoundation.nova.feature_account_api.view.SelectedWalletView
         android:id="@+id/balanceListAvatar"
-        android:layout_width="@dimen/avatar_size"
-        android:layout_height="@dimen/avatar_size"
-        android:layout_marginTop="12dp"
-        android:src="@color/white"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="25dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
