--- a/feature-account-impl/src/main/res/layout/fragment_account_details.xml
+++ b/feature-account-impl/src/main/res/layout/fragment_account_details.xml
@@ -26,12 +26,22 @@
         android:layout_marginEnd="16dp"
         android:hint="@string/account_wallet_nickname" />
 
+    <io.novafoundation.nova.common.view.AlertView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="16dp"
+        android:layout_marginEnd="16dp"
+        android:layout_marginTop="16dp"
+        android:id="@+id/accountDetailsTypeAlert"
+        tools:styleBackgroundColor="@color/white_12"
+        tools:styleIcon="@drawable/ic_watch"
+        tools:text="@string/account_details_watch_only_alert" />
+
     <androidx.recyclerview.widget.RecyclerView
         android:layout_width="match_parent"
         android:id="@+id/accountDetailsChainAccounts"
         android:layout_height="match_parent"
         app:layoutManager="io.novafoundation.nova.common.view.recyclerview.LinearLayoutManagerFixed"
-        android:layout_marginTop="16dp"
         tools:listitem="@layout/item_chain_acount" />
 
 </LinearLayout>
