--- a/feature-account-impl/src/main/res/layout/fragment_switch_account.xml
+++ b/feature-account-impl/src/main/res/layout/fragment_switch_account.xml
@@ -1,58 +1,63 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/switchAccountItemContainer"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
+    android:layout_height="match_parent"
     android:orientation="vertical">
 
     <View
         android:id="@+id/switchAccountPuller"
         style="@style/Widget.Nova.Puller"
         android:layout_gravity="center_horizontal"
-        android:layout_marginTop="4dp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        android:layout_marginTop="4dp" />
 
-
-    <TextView
-        android:id="@+id/switchAccountTitle"
-        style="@style/TextAppearance.NovaFoundation.SemiBold.Body"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="16dp"
-        android:layout_marginTop="17dp"
-        android:layout_weight="1"
-        android:text="@string/account_select_wallet"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/switchAccountPuller" />
-
-    <ImageView
-        android:id="@+id/switchAccountRightAction"
-        android:layout_width="24dp"
-        android:layout_height="24dp"
-        android:layout_marginTop="16dp"
-        android:layout_marginEnd="12dp"
-        android:src="@drawable/ic_settings_outline"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/switchAccountPuller"
-        app:tint="@color/actions_color"
-        tools:src="@drawable/ic_settings_outline" />
-
-    <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/switchAccountContent"
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="17dp"
-        android:clipToPadding="false"
-        android:paddingBottom="24dp"
-        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/switchAccountTitle"
-        tools:itemCount="1"
-        tools:listitem="@layout/item_account" />
+        android:layout_marginBottom="17dp"
+        android:orientation="horizontal"
+        tools:ignore="UseCompoundDrawables">
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+        <TextView
+            android:id="@+id/switchAccountTitle"
+            style="@style/TextAppearance.NovaFoundation.SemiBold.Body"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="16dp"
+            android:layout_marginTop="17dp"
+            android:layout_weight="1"
+            android:text="@string/account_select_wallet" />
+
+        <ImageView
+            android:id="@+id/switchAccountRightAction"
+            android:layout_width="24dp"
+            android:layout_height="24dp"
+            android:layout_marginTop="16dp"
+            android:layout_marginEnd="12dp"
+            android:src="@drawable/ic_settings_outline"
+            app:tint="@color/actions_color"
+            tools:src="@drawable/ic_settings_outline" />
+    </LinearLayout>
+
+    <androidx.core.widget.NestedScrollView
+        android:id="@+id/switchAccountScrollView"
+        android:layout_width="match_parent"
+        android:paddingBottom="16dp"
+        android:clipToPadding="false"
+        android:overScrollMode="never"
+        android:layout_height="0dp"
+        android:layout_weight="1">
+
+            <androidx.recyclerview.widget.RecyclerView
+                android:id="@+id/switchAccountContent"
+                android:overScrollMode="never"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
+                tools:itemCount="1"
+                tools:listitem="@layout/item_account" />
+
+    </androidx.core.widget.NestedScrollView>
+</LinearLayout>
