--- a/app/src/main/res/navigation/onboarding_nav_graph.xml
+++ b/app/src/main/res/navigation/onboarding_nav_graph.xml
@@ -44,6 +44,14 @@
             app:popEnterAnim="@anim/fragment_close_enter"
             app:popExitAnim="@anim/fragment_close_exit"
             app:destination="@id/createWatchWalletFragment" />
+
+        <action
+            app:enterAnim="@anim/fragment_open_enter"
+            app:exitAnim="@anim/fragment_open_exit"
+            app:popEnterAnim="@anim/fragment_close_enter"
+            app:popExitAnim="@anim/fragment_close_exit"
+            android:id="@+id/action_welcomeFragment_to_import_parity_signer_graph"
+            app:destination="@id/import_parity_signer_graph" />
     </fragment>
 
 
@@ -64,8 +72,9 @@
     </fragment>
 
     <include app:graph="@navigation/mnemonic_nav_graph" />
-
     <include app:graph="@navigation/import_nav_graph" />
+    <include app:graph="@navigation/import_parity_signer_graph" />
+
     <fragment
         android:id="@+id/createWatchWalletFragment"
         tools:layout="@layout/fragment_create_watch_wallet"
