--- a/common/src/main/res/values/colors.xml
+++ b/common/src/main/res/values/colors.xml
@@ -36,6 +36,7 @@
 
     <color name="black_24">#3D000000</color>
     <color name="black_48">#7A000000</color>
+    <color name="black_65">#A6000000</color>
 
     <color name="black1">@color/gray1</color>
     <color name="black2">@color/gray2</color>
