--- a/feature-account-impl/src/main/res/layout/fragment_scan_import_parity_signer.xml
+++ b/feature-account-impl/src/main/res/layout/fragment_scan_import_parity_signer.xml
@@ -21,5 +21,5 @@
         android:visibility="invisible"
         android:layout_height="wrap_content"
         style="@style/TextAppearance.NovaFoundation.SemiBold.Body"
-        android:text="Scan the QR code provided by Parity Signer" />
+        android:text="@string/account_parity_signer_scan" />
 </FrameLayout>
